--- a/localStorage-forja-manha/Login/index.html
+++ b/localStorage-forja-manha/Login/index.html
@@ -1,25 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
     <link rel="stylesheet" href="style.css">
-    <script
-  src="https://code.jquery.com/jquery-3.7.1.js"
-  integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4="
-  crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"
+        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 
-    </head>
+</head>
+
 <body>
     <div class="container">
         <div class=" round">
-            <img class="logo" src="./Images/logo.png!w700wp" alt="Logo">
+            <img class="logo" src="./Images/logo.jpg" alt="Logo">
         </div>
+        <div class="wrap-input-label">
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" placeholder="Insira o usuário">
+        </div>
+
+        <div class="wrap-input-label">
+            <label for="senha">Senha</label>
+            <input type="password" id="senha" placeholder="Insira a senha">
+            <div onclick="showPassoword()">
+                <img width="25px" src="./Images/view.png" alt="Eye" class="eye" id="eye">
+            </div>
+        </div>
+
+        <button class="btn-login" onclick="login()">Login</button>
+    </div>
+
+    <div class="error-div" id="error-modal">
+        <h3>Credenciais incorretas!</h3>
+        <button onclick="fecharError()">❌</button>
     </div>
     <script src="scrpt.js"></script>
 </body>
+
 </html>
