--- a/localStorage-forja-manha/loja/index.html
+++ b/localStorage-forja-manha/loja/index.html
@@ -9,10 +9,33 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <h1>loja</h1>
+    <a href="../Carrinho">Ir para o carrinho</a>
 
+    <div>
+        <h5 id="perfil"></h5id></h5>
+        <div>
+            Protocolo atual: <p id="idPerfil"></p>
+        </div>
+    </div>
+    <h1>Loja</h1>
+
+    <p>Bem Vindo <span id="user"></span> , Vamos às Compras!</p>
+
+    <br>
+    
+    <h2>PRODUTOS</h2>
+
+    <br>
+
+    <div class="wrap">
+        <div id="produtos-container" class="row center"></div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
